# pydantic-llm-io

./: .gitignore  DELIVERABLES.md  INDEX.md  LICENSE  Makefile  QUICKSTART.md  README.md  pyproject.toml
examples/: async_example.py  basic_usage.py  with_openai.py
src/pydantic_llm_io/: __init__.py  api.py  config.py  exceptions.py  logging.py  prompts.py  types.py
src/pydantic_llm_io/clients/: __init__.py  base.py  fake_client.py  openai_client.py
src/pydantic_llm_io/validation/: __init__.py  engine.py
tests/: __init__.py  conftest.py
tests/integration/: test_api.py
tests/unit/: test_config.py  test_exceptions.py  test_prompts.py
tests/unit/clients/: __init__.py  test_fake_client.py
tests/unit/validation/: __init__.py  test_engine.py
